tests/regression/success/const_to_non_const.lus
node count (i: bool) returns (cnt: int) ;
let
  cnt = (if i then 1 else 0) + (0 -> pre cnt) ;
tel

node top (const i: bool) returns (cnt: int) ;
(*@contract
  guarantee cnt >= 0 ;
*)
let
  cnt = count(i) ;
tel